--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -20,7 +20,7 @@
     <div class="tools">
         <a href="#" class="hints tasks"><span>10</span></a>
         <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
+        <a href="#" class="user">{{getUtenteEmail()}}</a>
     </div>
 </div>
 
@@ -31,9 +31,11 @@
                 <div class="tool-row">
                     <div class="tool">
                         <a href="#" class="button back only-icon">&nbsp;</a>
-                        <h3 class="page-title cliente">Francesca Palmi - Immobile</h3>
-                        <div style="float: right"><a href="#" class="button view">Catastali</a><a href="#"
-                                class="button edit">Modifica</a></div>
+                        <h3 class="page-title cliente">{{getCliente().nome + ' ' + getCliente().cognome}} - Immobile
+                        </h3>
+                        <div style="float: right">
+                            <a href="#" class="button view">Catastali</a>
+                            <a [routerLink]="" class="button edit" (click)="goToWizard()">Modifica</a></div>
                     </div>
                 </div>
             </div>
@@ -53,18 +55,20 @@
                     <div class="scheda-table">
                         <div class="scheda-row">
                             <div class="item">
-                                
+
                                 <h3 class="item-title">Proprietà: <span>{{immobile.quota}}%</span></h3>
                                 <ul class="item-list half-height">
                                     <li><span>Book Value</span><span>-</span></li>
                                     <li><span>Valore catastale</span><span>-</span></li>
                                     <li><span>Valore commerciale</span><span>-</span></li>
-                                    <li><span>Rendita</span><span>{{immobile.dati_catastali ? immobile.dati_catastali.rendita : '-'}}</span></li>
+                                    <li><span>Rendita</span><span>{{immobile.dati_catastali ? immobile.dati_catastali.rendita : '-'}}</span>
+                                    </li>
                                     <li><span>1ª casa</span><span>{{immobile.prima_casa ? 'Si' : 'No'}}</span></li>
                                 </ul>
                             </div>
                             <div class="item">
-                                    <div class="item-title">Mutuo: <a href="#" class="button view only-icon">&nbsp;</a></div>
+                                <div class="item-title">Mutuo: <a href="#" class="button view only-icon">&nbsp;</a>
+                                </div>
                                 <ul class="item-list half-height">
                                     <li><span>Elemento</span><span>valore</span></li>
                                     <li><span>Elemento</span><span>valore</span></li>
@@ -76,13 +80,17 @@
                             <div class="item">
                                 <h3 class="item-title">Tasse <span>{{immobile.tasse_totale}}</span></h3>
                                 <ul class="item-list half-height">
-                                    <li *ngFor="let t of immobile.tasse"><span>{{t.descrizione_tassa}}</span><span>{{t.importo_annuale}}</span></li>
+                                    <li *ngFor="let t of immobile.tasse">
+                                        <span>{{t.descrizione_tassa}}</span><span>{{t.importo_annuale}}</span></li>
                                 </ul>
                             </div>
                             <div class="item">
-                                <h3 class="item-title">Affitti <span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.importo_mensile : '-'}}</span></h3>
+                                <h3 class="item-title">Affitti
+                                    <span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.importo_mensile : '-'}}</span>
+                                </h3>
                                 <ul class="item-list half-height">
-                                    <li><span>Affittuario</span><span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.descrizione_affittuario : '-'}}</span></li>
+                                    <li><span>Affittuario</span><span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.descrizione_affittuario : '-'}}</span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
