Aggiunto pulsantino cancella cache

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -334,6 +334,11 @@
                     <button class="button add" (click)="goToWizard()">immobile</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="cell">
+                    <button class="button add" (click)="svuotaCache()">svuota</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
