--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,7 +8,6 @@
 
 
 <div class="main-body client">
-
     <div class="content-area">
         <div class="content login">
             <div class="login-form">
@@ -18,7 +17,7 @@
                     <input type="text" placeholder="username" [(ngModel)]="username">
                 </div>
                 <div class="form-item">
-                    <input type="text" placeholder="password" [(ngModel)]="password">
+                    <input type="password" placeholder="password" [(ngModel)]="password">
                 </div>
                 <div class="form-item">
                     <button class="button no-icon full-width" (click)="submit()">accedi</button>
