--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -20,7 +20,7 @@
                     <input type="password" placeholder="password" [(ngModel)]="password">
                 </div>
                 <div class="form-item">
-                    <button class="button no-icon full-width" (click)="submit()">accedi</button>
+                    <button class="button no-icon text-center" (click)="submit()">accedi</button>
                 </div>
             </div>
         </div>
