--- a/src/app/pages/report-analisi/report-analisi.page.html
+++ b/src/app/pages/report-analisi/report-analisi.page.html
@@ -45,7 +45,9 @@
                 </ul>
             </div>
             <div class="report-analisi">
-                <div class="grafici">dfsdf</div>
+                <div class="grafici">
+                    <img src="/assets/img/grafici-placeholder.jpg">
+                </div>
             </div>
         </div>
     </div>
