--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -31,8 +31,8 @@
                 <div class="tool-row">
                     <div class="tool">
                         <span>filtra per:</span>
-                        <input type="text" placeholder="nome">
-                        <input type="text" placeholder="C.F.">
+                        <input type="text" placeholder="nome" [(ngModel)]="searchName">
+                        <input type="text" placeholder="C.F." [(ngModel)]="searchCF">
                         <a href="#" class="button search">&nbsp;</a>
                         <a href="#" style="float: right" class="button add">cliente</a>
                     </div>
@@ -41,7 +41,7 @@
         </div>
         <div class="content home-list">
             <div class="header">
-                <div class="dettaglio-cliente">
+                <div class="dettaglio-cliente" *ngIf="clienteScelto.cliente_id">
                     <div class="cliente">
                         <div class="cliente-table">
                             <div class="cliente-row">
@@ -53,7 +53,7 @@
                                 <div class="item anagrafica"><span class="nome">{{clienteScelto.nome}}
                                         {{clienteScelto.cognome}}</span><span
                                         class="cf">{{clienteScelto.codice_fiscale}}</span><span
-                                        class="email">paolo.rossi@domain.it</span></div>
+                                        class="email">{{clienteScelto.email}}</span></div>
                                 <div class="item tools"><a href="#" class="button edit full-width">Modifica</a><a
                                         href="#" class="button report full-width">Report</a></div>
                             </div>
@@ -65,7 +65,8 @@
             </div>
             <div class="list">
                 <ul class="lista-cliente">
-                    <li *ngFor="let clienteLista of clienti" class="cliente" (click)="caricaCliente(clienteLista)">
+                    <li *ngFor="let clienteLista of clienti | clientfilter: searchName:searchCF" class="cliente"
+                        (click)="caricaCliente(clienteLista)">
                         <div class="cliente-table">
                             <div class="cliente-row">
                                 <div class="item immobili"><span class="badge">{{clienteLista.numero_proprieta}}</span>
@@ -187,7 +188,10 @@
     <div class="right-area">
         <div class="header">
             <div class="row">
-                <div class="header-cell">
+                <div class="header-cell" *ngIf="!clienteScelto.cliente_id">
+                    <span class="small">Nessun cliente selezionato</span>
+                </div>
+                <div class="header-cell" *ngIf="clienteScelto.cliente_id">
                     <span class="small">immobili di</span>
                     <span class="nome">{{clienteScelto.nome}} {{clienteScelto.cognome}}</span>
                 </div>
